--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 <body>
  <!--Шапка с лого-->
-<div class="head">
+ <header>
+    <div class="container">
+        <img src="./img/Vector.png" class="logo" alt="Logo">
+      <nav>
+        <ul>
+          <li>the problem<span class="span-menu">|</span></li>
+          <li>PiedPiperCoin<span class="span-menu">|</span></li>
+          <li>the team</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+
+  <!-- <div class="head">
     <div class="logo">
         <img src="./img/Vector.png" alt="Logo">
     </div>
@@ -21,7 +35,10 @@
         <span>|</span>
         <span>the team</span> 
     </div>
- </div>
+ </div> -->
+ 
+ 
+ 
  <!--Баннер-->
  <div>
      <h1 class="main-name">PiperNet Is Here</h1>
@@ -45,54 +62,54 @@
     We’re in this together! All of our computers and phones join in a network to make the strongest supercomputer the world has ever seen.
 </div>
 <!--Paper-coin-->
-<div>
-    <h2>Introducing PiedPiperCoin</h2>
-    <img src="./img/PPC Logo.png" alt="">
-    <div>
+<div class="paper-coin-block">
+    <h2 class="header-coin">Introducing PiedPiperCoin</h2>
+    <img src="./img/PPC Logo.png" class="image-coin" alt="">
+    <div class="first-coin-description">
         Pied Piper's new internet is built for users, by users. 
-        You supply the storage, compute, and networking resources that power our entire decentralized web.
+        <p>You supply the storage, compute, and networking resources that power our entire decentralized web.</p> 
     </div>
-    <div>
+    <div class="second-coin-description">
         <p>Now there's a way to give credit where credit is due. Compute credit, that is! 
         The more you share your device resources, the more PiedPiperCoin you receive. </p> 
-        <p>Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone 
+        <p class="paragraf-coin">Whether you're a developer with an app ready for market, or just an Average Joe with a smartphone 
         you'll love all you can do with PiedPiperCoin.</p> 
     </div>
 </div>
 <!--Team-->
 <div>
-    <h2>The Team</h2>
-    <div>
+    <h2 class="header-team">The Team</h2>
+    <div class="team-leader">
         <div>
             <img src="./img/image (1).png" alt="">
-            <p>Richard Hendricks</p> 
+            <p class="leader-name">Richard Hendricks</p> 
             <p>Founder & CEO</p>
         </div>
-        <div>
-            <img src="./img/image (2).png" alt="">
-            <p>Dinesh Chugtai</p> 
+        <div class="leader-profile">
+            <img src="./img/image (2).png"  alt="">
+            <p class="leader-name">Dinesh Chugtai</p> 
             <p>Senior Programmer</p>
         </div>
         <div>
             <img src="./img/image (3).png" alt="">
-            <p>Bertram Gilfoyle</p> 
+            <p class="leader-name">Bertram Gilfoyle</p> 
             <p>Chief Systems Architect</p>
         </div>
     </div>  
-    <div>
+    <div class="team-leader">
         <div>
             <img src="./img/image (4).png" alt="">
-            <p>Jared Dunn</p> 
+            <p class="leader-name">Jared Dunn</p> 
             <p>Chief Operating Officer</p>
         </div>
-        <div>
-            <img src="./img/image (5).png" alt="">
-            <p>Monica Hall</p> 
+        <div class="leader-profile">
+            <img src="./img/image (5).png"  alt="">
+            <p class="leader-name">Monica Hall</p> 
             <p>Chief Financial Officer</p>
         </div>
         <div>
             <img src="./img/image (6).png" alt="">
-            <p>Nelson Bighetti</p> 
+            <p class="leader-name">Nelson Bighetti</p> 
             <p>Majority Investor</p>
         </div>
     </div>   
